Media: Fix text on smaller screens

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,10 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-*{
-  scroll-behavior: smooth;
-}
-
 html {
   --line-color: #e5e7eb;
 }
@@ -176,7 +172,7 @@ html.dark {
   }
 
   .timeline-block {
-    width: 100%;
+    width: 390px;
     margin-bottom: 30px;
   }
   .timeline-block-right {
